--- a/habit-tracker/template/index.html
+++ b/habit-tracker/template/index.html
@@ -32,7 +32,7 @@
       <input id="habit_name" name="habit_name" type="text" required />
       <label for="target_streak"> Target Streak:</label>
       <input id="target_streak" required name="target_streak" min = "0" max = "10" type = "number"/>
-      <button type="submit" id = "submit_habit">Submit</button>
+      <button type="submit" id = "submit_habit">Submit!</button>
     </form>
     <ul id="habit_list"></ul>
   </div>
