Submitting all of week 1

--- a/habit-tracker/template/index.html
+++ b/habit-tracker/template/index.html
@@ -4,21 +4,6 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Habit Tracker</title>
-  <link rel="stylesheet" href="/style.css" />
-</head>
-<body>
-  <div class="container">
-    <h1>Habit Tracker</h1>
-
-    <form id="habit-form">
-      <input type="text" id="habit-name" placeholder="Enter habit name" required />
-      <button type="submit">Add Habit</button>
-    </form>
-
-    <ul id="habit-list"></ul>
-  </div>
-
   <title>Vite + React + TS</title>
 
   <link rel="stylesheet" href="style.css" />
@@ -28,9 +13,9 @@
     <form id ="habit_form">
       <label for="habit_name">Habit Name:</label>
       <input id="habit_name" name="habit_name" type="text" required />
-      <label for="target_streak"> Target Streak:</label>
+      <label for="target_streak"> Target Streak </label>
       <input id="target_streak" required name="target_streak" min = "0" max = "10" type = "number"/>
-      <button type="submit" id = "submit_habit">Submit!</button>
+      <button type="submit" id = "submit_habit">Submit</button>
     </form>
     <ul id="habit_list"></ul>
   </div>
